--- a/htmx_todo_list/lists/templates/base.html
+++ b/htmx_todo_list/lists/templates/base.html
@@ -14,7 +14,7 @@
         <script src="{% static 'js/hyperscript-0.9.7.min.js' %}" defer></script>
         <script src="{% static 'js/htmx-ext-json-enc.js' %}" defer></script>
     </head>
-    <body class="bg-gray-100">
+    <body class="bg-gray-100" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
         <div class="bg-green-500 py-8 text-center">
             <h1 class="text-gray-100 font-black text-4xl tracking-5">To-Do List App</h1>
             <p class="text-green-800 font-medium font-mono text-sm">Written with Django, Django Rest Framework, TailwindCSS, HTMX</p>
@@ -23,10 +23,5 @@
 {% block content %}
 {% endblock %}
 
-<script>
-    document.body.addEventListener('htmx:configRequest', (event) => {
-        event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
-    })
-</script>
     </body>
 </html>
