--- a/htmx_todo_list/lists/templates/index.html
+++ b/htmx_todo_list/lists/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-To-To List App - Alpine
+To-Do List App - HTMX
 {% endblock %}
 
 {% block content %}
